# loongsuite-python-agent

./: .gitignore  .pre-commit-config.yaml  CHANGELOG-loongsuite.md  CHANGELOG.md  CONTRIBUTING-loongsuite-zh.md  README-upstream.md  README-zh.md  README.md  copilot-instructions.md  dev-requirements.txt  pyproject.toml  tox-loongsuite.ini  tox.ini
instrumentation-genai/opentelemetry-instrumentation-agentscope/: README.md  pyproject.toml
instrumentation-genai/opentelemetry-instrumentation-agentscope/tests/: conftest.py  test_agentscope.py  test_request_attributes_extractor.py
instrumentation-genai/opentelemetry-instrumentation-agno/: README.md  pyproject.toml
instrumentation-genai/opentelemetry-instrumentation-agno/tests/: conftest.py  test_agno.py
instrumentation-genai/opentelemetry-instrumentation-microsoft-agent-framework/: CHANGELOG.md  README.rst  pyproject.toml
instrumentation-genai/opentelemetry-instrumentation-microsoft-agent-framework/tests/: test_processor.py  test_react_step.py
instrumentation-loongsuite/loongsuite-instrumentation-agentscope/: CHANGELOG.md  COMPLETE_TEST_REPORT.md  README.md  pyproject.toml  pytest.ini  run_all_manual_tests.sh
instrumentation-loongsuite/loongsuite-instrumentation-agentscope/tests/: __init__.py  _test_helpers.py  conftest.py  requirements.latest.txt  requirements.oldest.txt  requirements.txt  requirements.v2.txt  test_agent.py  test_agent_integration.py  test_call_chain_reentrancy.py  test_concurrent_react_step.py  test_config.py  test_instrumentor.py  test_model.py  test_multimodal.py  test_react_step_reentrancy.py  test_skill_detection.py  test_span_content.py  test_utils.py  test_v2_instrumentation.py
instrumentation-loongsuite/loongsuite-instrumentation-agno/: CHANGELOG.md  README.md  pyproject.toml  test-requirements.txt
instrumentation-loongsuite/loongsuite-instrumentation-agno/examples/: agno_dashscope_smoke.py
instrumentation-loongsuite/loongsuite-instrumentation-agno/tests/: conftest.py  test_agno.py
instrumentation-loongsuite/loongsuite-instrumentation-autogen/: CHANGELOG.md  README.md  pyproject.toml  test-requirements.txt
instrumentation-loongsuite/loongsuite-instrumentation-autogen/tests/: conftest.py  test_patch.py  test_span_processor.py  test_utils.py
instrumentation-loongsuite/loongsuite-instrumentation-bfclv4/: CHANGELOG.md  README.md  pyproject.toml  test-requirements.txt
instrumentation-loongsuite/loongsuite-instrumentation-bfclv4/tests/: conftest.py  test_instrument_lifecycle.py  test_instrumentor.py  test_internals.py  test_provider.py  test_state.py  test_utils.py  test_wrappers.py
instrumentation-loongsuite/loongsuite-instrumentation-claude-agent-sdk/: CHANGELOG.md  README.rst  pyproject.toml
instrumentation-loongsuite/loongsuite-instrumentation-claude-agent-sdk/tests/: conftest.py  requirements.latest.txt  requirements.oldest.txt  test_attributes.py  test_edge_cases.py  test_integration.py  test_mocks.py  test_session_capture.py  test_span_validation.py  test_unit.py
instrumentation-loongsuite/loongsuite-instrumentation-claw-eval/: CHANGELOG.md  README.md  pyproject.toml  test-requirements.txt
instrumentation-loongsuite/loongsuite-instrumentation-claw-eval/tests/: conftest.py  test_instrumentor.py  test_wrappers.py
instrumentation-loongsuite/loongsuite-instrumentation-copaw/: CHANGELOG.md  README.md  pyproject.toml
instrumentation-loongsuite/loongsuite-instrumentation-copaw/tests/: conftest.py  requirements.txt  test_entry_span.py  test_entry_utils.py  test_instrument_smoke.py
instrumentation-loongsuite/loongsuite-instrumentation-crewai/: CHANGELOG.md  README.md  pyproject.toml
instrumentation-loongsuite/loongsuite-instrumentation-crewai/examples/: crewai_smoke.py
instrumentation-loongsuite/loongsuite-instrumentation-dashscope/: CHANGELOG.md  README.rst  pyproject.toml
instrumentation-loongsuite/loongsuite-instrumentation-dify/: CHANGELOG.md  README.md  pyproject.toml
instrumentation-loongsuite/loongsuite-instrumentation-google-adk/: CHANGELOG.md  README.md  pyproject.toml
instrumentation-loongsuite/loongsuite-instrumentation-hermes-agent/: CHANGELOG.md  README.md  pyproject.toml  test-requirements.txt
instrumentation-loongsuite/loongsuite-instrumentation-langchain/: CHANGELOG.md  README.md  pyproject.toml
instrumentation-loongsuite/loongsuite-instrumentation-langgraph/: CHANGELOG.md  README.md  pyproject.toml
instrumentation-loongsuite/loongsuite-instrumentation-litellm/: CHANGELOG.md  README.rst  pyproject.toml
instrumentation-loongsuite/loongsuite-instrumentation-mcp/: CHANGELOG.md  README.md  pyproject.toml
instrumentation-loongsuite/loongsuite-instrumentation-mem0/: CHANGELOG.md  README.md  pyproject.toml  test-requirements-0.txt  test-requirements-1.txt  test-requirements-latest.txt  test-requirements-oldest.txt  test-requirements.txt
instrumentation-loongsuite/loongsuite-instrumentation-microsoft-agent-framework/: CHANGELOG.md  README.rst  pyproject.toml
instrumentation-loongsuite/loongsuite-instrumentation-qwen-agent/: CHANGELOG.md  README.md  pyproject.toml
instrumentation-loongsuite/loongsuite-instrumentation-qwenpaw/: CHANGELOG.md  README.md  pyproject.toml
instrumentation-loongsuite/loongsuite-instrumentation-terminus2/: CHANGELOG.md  README.md  pyproject.toml  test-requirements.txt
instrumentation-loongsuite/loongsuite-instrumentation-vita/: CHANGELOG.md  README.md  pyproject.toml  test-requirements.txt
instrumentation-loongsuite/loongsuite-instrumentation-webarena/: CHANGELOG.md  README.md  pyproject.toml  test-requirements.txt
instrumentation-loongsuite/loongsuite-instrumentation-wildtool/: CHANGELOG.md  README.md  pyproject.toml  test-requirements.txt
loongsuite-distro/: README.md  pyproject.toml
loongsuite-site-bootstrap/: README.md  pyproject.toml
loongsuite-site-bootstrap/pth/: loongsuite-site-bootstrap.pth
loongsuite-site-bootstrap/tests/: test_bootstrap_status.py
util/opentelemetry-util-genai/: CHANGELOG-loongsuite.md  CHANGELOG.md  README-loongsuite.rst  pyproject.toml  test-requirements.txt
(+840 files in other folders)
