[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loongsuite-distro"
dynamic = ["version"]
description = "LoongSuite Python Agent Distro"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
  { name = "Minghui Zhang", email = "zmh1625lumian@gmail.com" },
  { name = "OpenTelemetry Authors", email = "cncf-opentelemetry-contributors@lists.cncf.io" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "opentelemetry-api ~= 1.12",
  "opentelemetry-sdk ~= 1.13",
  "opentelemetry-instrumentation >= 0.58b0",
  "packaging",
]

[project.optional-dependencies]
otlp = [
  "opentelemetry-exporter-otlp ~= 1.40",
]

[project.entry-points.opentelemetry_configurator]
loongsuite = "loongsuite.distro:LoongSuiteConfigurator"

[project.entry-points.opentelemetry_distro]
loongsuite = "loongsuite.distro:LoongSuiteDistro"

[project.scripts]
loongsuite-bootstrap = "loongsuite.distro.bootstrap:main"
loongsuite-instrument = "opentelemetry.instrumentation.auto_instrumentation:run"

[project.urls]
Homepage = "https://github.com/alibaba/loongsuite-python-agent"
Repository = "https://github.com/alibaba/loongsuite-python-agent"

[tool.hatch.version]
path = "src/loongsuite/distro/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/loongsuite"]
