[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opentelemetry-instrumentation-microsoft-agent-framework"
dynamic = ["version"]
description = "OpenTelemetry instrumentation for Microsoft Agent Framework (agent-framework-core)"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
  { name = "ARMS LoongSuite Authors" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "opentelemetry-api >= 1.37",
  "opentelemetry-instrumentation >= 0.58b0",
  "opentelemetry-semantic-conventions >= 0.58b0",
  "opentelemetry-util-genai",
  "wrapt >= 1.14",
]

[project.optional-dependencies]
instruments = [
  "agent-framework-core >= 1.0.0",
]

[project.entry-points.opentelemetry_instrumentor]
microsoft_agent_framework = "opentelemetry.instrumentation.microsoft_agent_framework:MicrosoftAgentFrameworkInstrumentor"

[project.urls]
Homepage = "https://github.com/alibaba/loongsuite-python-agent"
Repository = "https://github.com/alibaba/loongsuite-python-agent"

[tool.hatch.version]
path = "src/opentelemetry/instrumentation/microsoft_agent_framework/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/README.rst",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]
