[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loongsuite-instrumentation-agentscope"
dynamic = ["version"]
description = "OpenTelemetry AgentScope Instrumentation"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "LoongSuite Python Agent Authors", email = "qp467389@alibaba-inc.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "opentelemetry-api ~= 1.37",
    "opentelemetry-instrumentation ~= 0.58b0",
    "opentelemetry-semantic-conventions ~= 0.58b0",
]

[project.optional-dependencies]
instruments = [
    "agentscope",
]
# 支持两个版本的 agentscope 测试
test = [
    "pytest",
    "opentelemetry-sdk",
    "respx",
]
test-v0 = [
    "agentscope>=0.1.0,<1.0.0",
    "pytest",
    "opentelemetry-sdk",
    "respx",
]
test-v1 = [
    "agentscope>=1.0.0",
    "pytest",
    "opentelemetry-sdk",
    "respx",
]
type-check = []


[tool.hatch.version]
path = "src/opentelemetry/instrumentation/agentscope/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]

[project.entry-points.opentelemetry_instrumentor]
agentscope = "opentelemetry.instrumentation.agentscope:AgentScopeInstrumentor"
