[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loongsuite-instrumentation-agentscope"
dynamic = ["version"]
description = "OpenTelemetry AgentScope Instrumentation"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "LoongSuite Python Agent Authors", email = "qp467389@alibaba-inc.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "opentelemetry-api ~= 1.37",
    "opentelemetry-instrumentation ~= 0.58b0",
    "opentelemetry-semantic-conventions ~= 0.58b0",
    "opentelemetry-util-genai",
    "wrapt",
]

[project.optional-dependencies]
instruments = [
    "agentscope >= 1.0.0",
]
# 支持两个版本的 agentscope 测试
test = [
    "pytest ~= 8.0",
    "pytest-asyncio ~= 0.23.0",
    "pytest-cov ~= 4.1.0",
    "pytest-vcr ~= 1.0.2",
    "vcrpy ~= 5.1.0",
    "pyyaml ~= 6.0",
    "agentscope >= 1.0.0",
]

[project.entry-points.opentelemetry_instrumentor]
agentscope = "opentelemetry.instrumentation.agentscope:AgentScopeInstrumentor"

[project.urls]
Homepage = "https://github.com/alibaba/loongsuite-python-agent"
Repository = "https://github.com/alibaba/loongsuite-python-agent"

[tool.hatch.version]
path = "src/opentelemetry/instrumentation/agentscope/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
