[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loongsuite-instrumentation-claude-agent-sdk"
dynamic = ["version"]
description = "LoongSuite Claude Agent SDK instrumentation"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
  { name = "LoongSuite Python Agent Authors", email = "qp467389@alibaba-inc.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "opentelemetry-api ~= 1.37",
  "opentelemetry-instrumentation ~= 0.58b0",
  "opentelemetry-semantic-conventions ~= 0.58b0",
  # Note: opentelemetry-util-genai should be installed from local source
  # for extended features (ExtendedTelemetryHandler)
  "opentelemetry-util-genai >= 0.2b0",
]

[project.optional-dependencies]
instruments = [
  "claude-agent-sdk >= 0.1.0",
]

[project.entry-points.opentelemetry_instrumentor]
claude_agent_sdk = "opentelemetry.instrumentation.claude_agent_sdk:ClaudeAgentSDKInstrumentor"

[project.urls]
Homepage = "https://github.com/alibaba/loongsuite-python-agent"

[tool.hatch.version]
path = "src/opentelemetry/instrumentation/claude_agent_sdk/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]

