[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loongsuite-instrumentation-claw-eval"
dynamic = ["version"]
description = "LoongSuite claw-eval instrumentation"
license = "Apache-2.0"
requires-python = ">=3.10,<4"
authors = [
  { name = "OpenTelemetry Authors", email = "cncf-opentelemetry-contributors@lists.cncf.io" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "opentelemetry-api >= 1.37.0",
  "opentelemetry-instrumentation >= 0.58b0",
  "opentelemetry-semantic-conventions >= 0.58b0",
  "wrapt >= 1.17.3, < 2.0.0",
]

[project.optional-dependencies]
instruments = [
  "claw-eval >= 0.1.0"
]

[project.entry-points.opentelemetry_instrumentor]
claw_eval = "opentelemetry.instrumentation.claw_eval:ClawEvalInstrumentor"

[project.urls]
Homepage = "https://github.com/alibaba/loongsuite-python-agent/tree/main/instrumentation-loongsuite/loongsuite-instrumentation-claw-eval"
Repository = "https://github.com/alibaba/loongsuite-python-agent"

[tool.hatch.version]
path = "src/opentelemetry/instrumentation/claw_eval/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]
