[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loongsuite-instrumentation-copaw"
dynamic = ["version"]
description = "LoongSuite CoPaw Instrumentation"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10,<3.14"
authors = [
  { name = "Minghui Zhang", email = "zmh1625lumian@gmail.com" },
  { name = "OpenTelemetry Authors", email = "cncf-opentelemetry-contributors@lists.cncf.io" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "opentelemetry-api ~= 1.37",
  "opentelemetry-instrumentation >= 0.58b0",
  "opentelemetry-semantic-conventions >= 0.58b0",
  "opentelemetry-util-genai",
  "wrapt >= 1.17.3, < 2.0.0",
]

[project.optional-dependencies]
instruments = [
  "copaw >= 0.1.0",
]

[project.entry-points.opentelemetry_instrumentor]
copaw = "opentelemetry.instrumentation.copaw:CoPawInstrumentor"

[project.urls]
Homepage = "https://github.com/alibaba/loongsuite-python-agent/tree/main/instrumentation-loongsuite/loongsuite-instrumentation-copaw"
Repository = "https://github.com/alibaba/loongsuite-python-agent"

[tool.hatch.version]
path = "src/opentelemetry/instrumentation/copaw/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
