[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loongsuite-instrumentation-dify"
dynamic = ["version"]
description = "OpenTelemetry Dify Instrumentation"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "LoongSuite Python Agent Authors", email = "" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "opentelemetry-api ~= 1.37",
    "opentelemetry-instrumentation ~= 0.58b0",
    "opentelemetry-semantic-conventions ~= 0.58b0",
]

[project.optional-dependencies]
instruments = [
]
test = [
    "pytest",
    "opentelemetry-sdk",
]
type-check = []


[tool.hatch.version]
path = "src/opentelemetry/instrumentation/dify/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]

[project.entry-points.opentelemetry_instrumentor]
dify = "opentelemetry.instrumentation.dify:DifyInstrumentor"