[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loongsuite-instrumentation-google-adk"
dynamic = ["version"]
description = "LoongSuite instrumentation for Google Agent Development Kit (ADK)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
  { name = "Huxing Zhang", email = "huxing.zhx@alibaba-inc.com" },
  { name = "Minghui Zhang", email = "zmh1625lumian@gmail.com" },
  { name = "OpenTelemetry Authors", email = "cncf-opentelemetry-contributors@lists.cncf.io" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = [
  "opentelemetry-api ~= 1.37",
  "opentelemetry-sdk ~= 1.37",
  "opentelemetry-semantic-conventions ~= 0.58b0",
  "opentelemetry-util-genai ~= 0.2b0",
  "wrapt >= 1.0.0, < 2.0.0",
]

[project.optional-dependencies]
instruments = [
  "google-adk >= 0.1.0",
]

test = [
  "pytest >= 7.0.0",
  "pytest-asyncio >= 0.21.0",
  "pytest-cov >= 4.0.0",
  "google-adk >= 0.1.0",
]

[project.entry-points.opentelemetry_instrumentor]
google-adk = "opentelemetry.instrumentation.google_adk:GoogleAdkInstrumentor"

[project.urls]
Homepage = "https://github.com/alibaba/loongsuite-python-agent/tree/main/instrumentation-loongsuite/loongsuite-instrumentation-google-adk"
Repository = "https://github.com/alibaba/loongsuite-python-agent"

[tool.hatch.version]
path = "src/opentelemetry/instrumentation/google_adk/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/test",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src/opentelemetry/instrumentation/google_adk --cov-report=term-missing --cov-report=html"
filterwarnings = [
  # Filter Google ADK SDK deprecation warnings
  "ignore:The `plugins` argument is deprecated:DeprecationWarning:google.adk.runners",
  "ignore:deprecated:DeprecationWarning:google.adk.runners",
  # Filter OpenTelemetry attribute type warnings (should be fixed in code, but filter for now)
  "ignore:Invalid type.*in attribute.*finish_reasons:UserWarning:opentelemetry.attributes",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
  "*/tests/*",
  "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "@abstractmethod",
]
