[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loongsuite-instrumentation-hermes-agent"
dynamic = ["version"]
description = "LoongSuite Hermes Agent instrumentation"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10,<4"
authors = [
  { name = "OpenTelemetry Authors", email = "cncf-opentelemetry-contributors@lists.cncf.io" },
]
dependencies = [
  "opentelemetry-api >= 1.37.0, < 1.40",
  "opentelemetry-instrumentation >= 0.60b1, < 0.61",
  "opentelemetry-instrumentation-threading >= 0.60b1, < 0.61",
  "opentelemetry-sdk >= 1.37.0, < 1.40",
  "wrapt >= 1.0.0, < 2.0.0",
]

[project.optional-dependencies]
instruments = [
  "openai >= 1.0.0",
]

[project.entry-points.opentelemetry_instrumentor]
hermes-agent = "opentelemetry.instrumentation.hermes_agent:HermesAgentInstrumentor"

[tool.hatch.version]
path = "src/opentelemetry/instrumentation/hermes_agent/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]
