[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loongsuite-instrumentation-hermes-agent"
dynamic = ["version"]
description = "LoongSuite Hermes Agent instrumentation"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10,<4"
authors = [
  { name = "OpenTelemetry Authors", email = "cncf-opentelemetry-contributors@lists.cncf.io" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "opentelemetry-api >= 1.37.0, < 1.40",
  "opentelemetry-instrumentation >= 0.60b1, < 0.61",
  "opentelemetry-instrumentation-threading >= 0.60b1, < 0.61",
  "opentelemetry-sdk >= 1.37.0, < 1.40",
  "opentelemetry-semantic-conventions >= 0.60b1, < 0.61",
  "opentelemetry-util-genai",
  "wrapt >= 1.0.0, < 2.0.0",
]

[project.optional-dependencies]
instruments = [
  "openai >= 1.0.0",
]

[project.entry-points.opentelemetry_instrumentor]
hermes-agent = "opentelemetry.instrumentation.hermes_agent:HermesAgentInstrumentor"

[project.urls]
Homepage = "https://github.com/alibaba/loongsuite-python-agent/tree/main/instrumentation-loongsuite/loongsuite-instrumentation-hermes-agent"
Repository = "https://github.com/alibaba/loongsuite-python-agent"

[tool.hatch.version]
path = "src/opentelemetry/instrumentation/hermes_agent/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]
